CR-2001-12-17-0: Testsuite: - handle_vi_edit procedure now uses now 
                              open_remote_spawn_id procedure
                            - bugfix in setup_queues / install_core_system check
                            - bugfix in performance/cluster/check.exp (hanging 
                              testsuite)

JG-2001-12-17-2: Bugfix:    Bugfix for JG-2001-12-17-0 handling "none" as
                            starter_method.

EB-2001-12-17-1: Bugfix:    qstat -j <job_id> did not show a monitoring message
                 Issue:     #113
                 Bugtraq:   #4614501

JG-2001-12-17-1: Testsuite: Testsuite framework will output stack trace
                            if a TCL error causes a test to fail.

JG-2001-12-17-0: Feature:   Implemented starter_method for qrsh.

EB-2001-12-17-0: Feature:   Compatibility mode (sge_request, SGE_*)

AH-2001-12-14-0: Bugfix:    SGE's hostaliasing can prevent qmaster restart
                 Issue:     #95

AA-2001-12-14-1: Bugfix:    got a X protocol error, fixed -> AA-2001-12-14-0:

AA-2001-12-14-0: Bugfix:    Sharetree did not show the correct user data after
                            leaving and reentering the sharetree dialogue when
                            the sharetree had been scrolled down

JG-2001-12-14-0: Doc:       ADOC documentation for the event client interface.
                            HTML version in doc/devel, linked to module_doc.

EB-2001-12-13-0: Bugfix:    Qmaster automatically corrects invalid task id
                            ranges during job submittion.
                 Issue:     None (Fix of Enhancem.: EB-2001-12-10-1)

AA-2001-12-13-0: Feature:   added max_aj_instances and max_aj_tasks to global
                            cluster config
                            qmonMirrorMulti -> qmonMirrorMultiAnswer

EB-2001-12-12-0: Bugfix:    Changed/enhanced qmon's "Job Control" and "Job
                            Submission" dialog so that they respect unenrolled